# Koya

./: .gitattributes  .gitignore  .qmlls.ini  CMakeLists.txt
src/: AppShell.qml  main.cpp
src/room/: RoomPage.qml  RoomStage.qml
src/room/components/: ExteriorScene.qml  RoomBase.qml  RoomStage.qml
